python: common package, list comp, generator exp

--- a/role-based-roadmaps/backend/2.backend-language/python/5.common-packages/1.common-packages.md
+++ b/role-based-roadmaps/backend/2.backend-language/python/5.common-packages/1.common-packages.md
@@ -56,6 +56,15 @@ dependencies = [
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 ```
+Penjelasan singkat:
+- [project]
+  - name, version → identitas project (wajib kalau mau dijadikan package)
+  - requires-python → versi Python minimal
+  - dependencies → daftar package dari PyPI
+- [build-system]
+  - requires → library yang dibutuhkan untuk proses build
+  - build-backend → tool yg dipakai untuk build (setuptools/poetry/pdm/dll)
+Untuk pure app internal (bukan library yang mau dipublish), ini sudah cukup.
 
 ### Contoh dengan poetry
 ```toml
@@ -84,6 +93,28 @@ mypy = "^1.11.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 ```
+Penjelasan:
+- [tool.poetry]
+  - metadata project (nama, versi, author)
+- [tool.poetry.dependencies]
+  - dependency utama (prod)
+- [tool.poetry.group.dev.dependencies]
+  - dependency khusus dev (testing, linting)
+- [build-system]
+  - Poetry memakai poetry-core sebagai build backend
 
+Install package:
+```bash
+poetry add fastapi
+poetry add --group dev pytest
+```
+Poetry akan otomatis update pyproject.toml dan poetry.lock
+
+
+## Konfigurasi tools di pyproject.toml
+### Contoh
+- Black
+- Ruff (linter)
+- pytest
 
 
