fix: add link on readme and change name

--- a/languages/python/5.common-packages/1.common-packages.md
+++ b/languages/python/5.common-packages/1.common-packages.md
@@ -42,7 +42,7 @@ name = "my-app"
 version = "0.1.0"
 description = "Simple API using FastAPI"
 authors = [
-  { name = "Fikri Marzuki", email = "fikri@example.com" }
+  { name = "Pythonia", email = "pythonia@example.com" }
 ]
 requires-python = ">=3.12"
 
@@ -72,7 +72,7 @@ Untuk pure app internal (bukan library yang mau dipublish), ini sudah cukup.
 name = "my-fastapi-app"
 version = "0.1.0"
 description = "FastAPI backend for my project"
-authors = ["Fikri Marzuki <fikri@example.com>"]
+authors = ["Pythonia <pythonia@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
