--- a/languages/python/5.common-packages/4.paradigm.md
+++ b/languages/python/5.common-packages/4.paradigm.md
@@ -57,7 +57,7 @@ class User:
   def greet(self):
     return f"Hello {self.name}"
 
-u = User("Fikri")
+u = User("Pythonia")
 print(u.greet())
 ```
 OOP dipakai di: FastAPI, Django, SQLAchemy, Pydantic, ML Frameworks
